--- a/product-page.html
+++ b/product-page.html
@@ -55,7 +55,24 @@
     </header>
 
 <div class="page-container">
-    <section class="home-page main-screen" style="background-image: url('img/home-page.png');">
+    <section class="product-page main-screen" style="background-image: url('img/home-page.png');">
+        <div class="swiper bg-slider">
+            <div class="swiper-wrapper bg-slider-wrapper">
+                <div class=" bg-slide">
+                    <img src="img/home-page.webp">
+                </div>
+                <div class="bg-slide">
+                    <img src="img/bg2.png">
+                </div>
+                <div class=" bg-slide">
+                    <img src="img/home-page.webp">
+                </div>
+                 <div class="bg-slide">
+                    <img src="img/bg2.png">
+                </div>
+            </div>
+        </div>
+
         <div class="container">
             <div class="main-screen__inner">
                 <h1>Smokey Quartz</h1>
