--- a/product-page.html
+++ b/product-page.html
@@ -45,7 +45,7 @@
                         <span>Краснодар</span>
                     </div>
 
-                    <a href="" class="btn-secondary">Перезвонить мне</a>
+                    <a href="" class="btn-secondary popup-link">Перезвонить мне</a>
                 </div>
 
 
